<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:src="@drawable/ic_face"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/face_detect"
        android:textColor="@color/main_text_color"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/no_face_detected"
        android:textColor="@color/sub_text_color"
        android:textSize="32sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="59dp"
        android:background="@color/dialog_line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/exit_detect"
            android:textColor="@color/main_text_color"
            android:textSize="40sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="145dp"
            android:background="@color/dialog_line_color"/>

        <TextView
            android:id="@+id/dialog_retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/try_again"
            android:textColor="@color/blue_text"
            android:textSize="40sp"/>
    </LinearLayout>

</LinearLayout>
