<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_open_service"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/remind_opening_service"
            android:textColor="@android:color/white"
            android:textSize="46sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:background="@drawable/bg_button"
            android:text="@string/open_now"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/tick1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="540dp"
            android:src="@drawable/ic_tick"
            app:layout_constraintStart_toStartOf="@+id/btn_open"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/service1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/exempt_pwd"
            android:textColor="@color/main_text_color"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@id/tick1"
            app:layout_constraintStart_toEndOf="@id/tick1"
            app:layout_constraintTop_toTopOf="@id/tick1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/exempt_pwd_summary"
            android:textColor="@color/sub_text_color"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/service1"
            app:layout_constraintTop_toBottomOf="@id/service1"/>

        <ImageView
            android:id="@+id/tick2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_tick"
            app:layout_constraintStart_toStartOf="@+id/btn_open"
            app:layout_constraintTop_toBottomOf="@id/tick1"/>

        <TextView
            android:id="@+id/service2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/face_login"
            android:textColor="@color/main_text_color"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@id/tick2"
            app:layout_constraintStart_toEndOf="@id/tick2"
            app:layout_constraintTop_toTopOf="@id/tick2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/face_login_summary"
            android:textColor="@color/sub_text_color"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/service2"
            app:layout_constraintTop_toBottomOf="@id/service2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cross"/>

</LinearLayout>
